--- a/prototypes/two/package.json
+++ b/prototypes/two/package.json
@@ -7,6 +7,7 @@
         "@primer/octicons-react": "^9.6.0",
         "gh-pages": "^2.2.0",
         "react": "^16.13.1",
+        "react-beautiful-dnd": "^13.1.0",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
         "react-router-dom": "^5.2.0",
