--- a/prototypes/two/package.json
+++ b/prototypes/two/package.json
@@ -11,7 +11,7 @@
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^3.3.1",
+        "react-scripts": "^3.4.4",
         "react-table": "^6.11.5",
         "react-timeago": "^4.4.0"
     },
@@ -19,7 +19,7 @@
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "tsc",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -37,5 +37,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.39",
+        "typescript": "^3.9.10"
     }
 }
